# mitosis-core

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  loop_runner.sh  makefile
docs/: setup.md  (+4 more)
exp/: CMakeLists.txt  Makefile  README.md  bootstrap_proxy.py  makefile  sample.py  yfinance.csv
exp/common/: bench.py  connector.cc  criu_wrapper.py  func_bench_wrapper.py  mitosis_wrapper.py  simple_child.cc  simple_child_socket.cc  simple_parent.cc  simple_parent.py  syscall_lib.py  trigger.py
exp/criu-micro/: .gitignore  README.md  bench_exe_time_parent.py  copy_env.sh  host_dump.sh  rcopy.sh  restore.sh  run_benchmark.sh
exp/fork-functions/: README.md  benchmark_lean_container.c  benchmark_process_fork.c  requirements.txt  run_lean_container.c
exp/fork-functions/chameleon/: function.py  function_bench.py
exp/fork-functions/chamelon/: function.py  test.py
exp/fork-functions/child/: Dockerfile  lean_child.cc
exp/fork-functions/compression/: function.py  function_bench.py
exp/fork-functions/dd/: function.py
exp/fork-functions/ffmpeg/: function.py
exp/fork-functions/finra/: child_function_wrapper.py  function.py  function_bench.py  function_local_fork.py  master.py  private_data_center.py  rpcclient.py  rpcserver.py  trigger.py  trigger_local_fork.py  util.py
exp/fork-functions/gzip/: function.py
exp/fork-functions/helloworld/: function.py  function_bench.py
exp/fork-functions/image/: function.py  function_bench.py
exp/fork-functions/image-processing/: function.py
exp/fork-functions/imgresize/: function.py
exp/fork-functions/json/: function.py  function_bench.py
exp/fork-functions/linpack/: function.py  function_bench.py
exp/fork-functions/matmul/: function.py  function_bench.py
exp/fork-functions/micro/: bench_file_access.cc  empty_function.py  function.py  parent.cc  syscall_lib.py  working_set_bench.cc  workingset.cc  workingset_impl.cc  workingset_py_wrapper.py  workingset_v1.py
exp/fork-functions/pagerank/: function.py  function_bench.py
exp/fork-functions/pyaes/: function.py  function_bench.py
exp/fork-functions/recognition/: function.py  function_bench.py
exp/fork-functions/video-processing/: function.py
exp/fork-micro/: .gitignore  CMakeLists.txt  bench_exe_time_parent.cc  bench_exe_time_parent.py  bench_prepare_time.cc  bench_prepare_time.py
exp/gflags_dir/: Makefile  gflags-nonamespace-targets.cmake  gflags-targets.cmake
exp/os-network/one-sided-throughput/: README.md  compile.sh  dc-clean-or.toml  dc-clean.toml  dc-throughput-or.toml  dc-throughput.toml  rc-clean-or.toml  rc-clean.toml  rc-throughput-or.toml  rc-throughput.toml  sync_to_server.sh
exp/os-network/rc-connection/: README.md  bootstrap_proxy.py  clean.toml  compile.sh  parse_thpt_log.py
exp/os-network/rpc/: bench_nil_rpc.cc  bench_nil_rpc.hh
exp/scripts/: build-exp.toml  build.toml  clean.toml  exp_runner.py  lean_runner.py  micro_runner.py  prepare-lean-container.toml  run_lean_container.sh
mitosis/: Cargo.toml  Kbuild  build.rs
mitosis-kms/fork/: Cargo.toml  build.rs
mitosis-kms/fork/src/: kernel_helper.c  lib.rs
mitosis-kms/fork/tests/: test.rs
mitosis-macros/unitests/kernel_module_param/: Cargo.toml
mitosis-util/unitests/sample/: Cargo.toml
mitosis/src/: bindings.rs  core_syscall_handler.rs  dc_pool.rs  descriptor.rs  descriptors.rs  histogram.rs  kern_wrappers.rs  lib.rs  lock_bundler.rs  mem_pools.rs  process.rs  rc_conn_pool.rs  rdma_context.rs  remote_paging.rs  remote_pt_cache.rs  resume.rs  rpc_caller_pool.rs  rpc_handlers.rs  rpc_service.rs  shadow_process.rs  shadow_process_service.rs  startup.rs  syscalls.rs
mitosis/src/descriptor/: page_map.rs  page_table.rs  reg.rs
mitosis/src/descriptors/: child.rs  factory.rs  fast_descriptors.rs  mod.rs  page_table.rs  pair.rs  parent.rs  rdma.rs  reg.rs  vma.rs
mitosis/src/kern_wrappers/: mm.rs  page.rs  task.rs  vma.rs  vma_iters.rs
mitosis/src/manager/: manager.rs  manager_handler.rs  mod.rs
mitosis/src/native/: kernel_helper.c  kernel_helper.h
mitosis/src/prefetcher/: executor.rs  mod.rs  strategies.rs
mitosis/src/process/: mm.rs  task.rs  vma.rs
mitosis/src/remote_mapping/: mod.rs  page_cache.rs  page_structures.rs  page_table.rs
mitosis/src/shadow_process/: page.rs  page_table.rs  vma.rs
mitosis/src/syscalls/: basic.rs
mitosis/unitests/: .gitignore  Makefile  build.py  run_tests.py
mitosis/unitests/dc_pool/: Cargo.toml
mitosis/unitests/descriptors/: Cargo.toml
mitosis/unitests/fork/: Cargo.toml
mitosis/unitests/kern_wrapper/: Cargo.toml
mitosis/unitests/kernel_module_param/: Cargo.toml
mitosis/unitests/large_prepare/: Cargo.toml
mitosis/unitests/prefetcher/: Cargo.toml
mitosis/unitests/process/: Cargo.toml
mitosis/unitests/rc_conn_pool/: Cargo.toml
mitosis/unitests/rdma_context/: Cargo.toml
mitosis/unitests/remote_page_table/: Cargo.toml
mitosis/unitests/sample/: Cargo.toml
mitosis/unitests/sample_param/: Cargo.toml
mitosis/unitests/serializer/: Cargo.toml
mitosis/unitests/services/: Cargo.toml
mitosis/unitests/shadow_process/: Cargo.toml
mitosis/unitests/syscalls/: Cargo.toml
os-network/: Cargo.toml  rust-toolchain.toml
os-network/bench/: build.py  build_tests.py
os-network/bench/dc_read_client/: Cargo.toml
os-network/bench/dc_read_or_client/: Cargo.toml
os-network/src/: bytes.rs  conn.rs  datagram.rs  future.rs  lib.rs  rdma.rs  remote_memory.rs  rpc.rs  serialize.rs  timeout.rs
os-network/stress_tests/: sync_kernel_module.sh
os-network/unitests/: Makefile  run_tests.py
stress-test/: .gitignore  CMakeLists.txt  README.md  bootstrap.py  makefile_template
stress-test/fork/: simple_parent.cc
stress-test/rpc/: Kbuild  Kbuild-checksum-payload  Kbuild-empty-rpc  build_tests.py  run_tests.py
stress-test/templates-build/: template-build-cpp.toml  template-build-lean-container.toml  template-build-mitosis.toml  template-build-rpc-bench.toml  template-build-rpc-checksum.toml  template-clean.toml
stress-test/templates-run/: peak-lean-container.toml  peak-nil-rpc-kernel-module.toml
(+479 files in other folders)
