[package]
name = "mitosis"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"

[features]
default = ["os-network", "rust-kernel-linux-util", "rust-kernel-rdma-base"]
cow = []           # use CoW strategy when prepare parent VMA ; or else copying user pages into kernel.
eager-resume = [] # use eager page-fetching strategy instead of fetching while page fault
resume-profile = [] # peak resume running profile
prefetch = [] # whether to open prefetch
page-cache=[]

[dependencies]
mitosis-protocol = { path = "../mitosis-user-libs/mitosis-protocol" }
os-network = { path = "../os-network", optional = true, features = ["dct"] }
rust-kernel-linux-util = { path = "../deps/krcore/rust-kernel-rdma/rust-kernel-linux-util", optional = true, features = ["static_log_check", "max_level_trace"] }
rust-kernel-rdma-base = {path = "../deps/krcore/rust-kernel-rdma/rust-kernel-rdma-base",optional = true}
thiserror-no-std = "2.0.2"
mitosis-macros = { path = "../mitosis-macros" }
bitflags = "1"
hashbrown = {features=["raw"], path="../deps/hashbrown"}
x86_64 = {}
cfg-if = "0.1"
static_assertions = "1.1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Default profile for this project
# Always enable all the optimizations except overflow-checks, disable debug print
[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false # Set to false to disable debug print
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# Comment the above default profile and uncomment the follow lines, then re-make the project to enable non-release mode
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html

# [profile.dev]
# opt-level = 1
