[workspace]

[package]
name = "fork"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["mitosis","krdma-test",]
cow = ["mitosis/cow"]
page-cache = ["mitosis/page-cache"]
prefetch = ["mitosis/prefetch"]
eager-resume = ["mitosis/eager-resume"]
resume-profile = ["mitosis/resume-profile"]

[dependencies]
krdma-test = {path="../../deps/krcore/rust-kernel-rdma/krdma-test",optional = true}

mitosis = {path = "../../mitosis", version="0.1.0", optional = true}
#mitosis = {path = "../../mitosis", version="0.1.0", optional = true, features = ["cow", "prefetch"]}
#mitosis = {path = "../../mitosis", version="0.1.0", optional = true, features = ["cow","eager-resume"]}
#mitosis = {path = "../../mitosis", version="0.1.0", optional = true, features = ["cow", "resume-profile"]}
mitosis-macros = {path = "../../mitosis-macros"}

[dev-dependencies]
mitosis-rust-client = { path = "../../mitosis-user-libs/mitosis-rust-client" }
kernel-module-testlib = { path = "../../deps/krcore/rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"