[workspace]

[package]
name = "kernel_module_param_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>, wtx <wang.tianxia1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["mitosis","krdma-test"]

[dependencies]
krdma-test = {path="../../../deps/krcore/rust-kernel-rdma/krdma-test",optional = true}
mitosis = {path="../../../mitosis", optional = true}
mitosis-macros = {path = "../../../mitosis-macros"}

[dev-dependencies]
kernel-module-testlib = { path = "../../../deps/krcore/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"
