[workspace]

[package]
name = "sample_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["KRdmaKit"]

[dependencies]
KRdmaKit = {path = "../../../deps/rust-kernel-rdma/KRdmaKit",optional = true, features = ["dct"]}


[dev-dependencies]
kernel-module-testlib = { path = "../../../deps/rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
