
[workspace]

[package]
name = "dc_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["os-network","krdma-test",]

[dependencies]
os-network = {path = "../../../os-network", optional = true, features = ["dct"]}
krdma-test = {path="../../../deps/krcore/rust-kernel-rdma/krdma-test",optional = true}
thiserror-no-std = "2.0.2"

[dev-dependencies]
kernel-module-testlib = { path = "../../../deps/krcore/rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
