[workspace]

[package]
name = "wc_err_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["os-network", "KRdmaKit","rust-kernel-linux-util","krdma-test","rust-kernel-rdma-base"]

[dependencies]
KRdmaKit = { package = "KRdmaKit", path = "../../../deps/krcore/KRdmaKit", optional = true, features = ["kernel"] }
os-network = {path = "../../../os-network", optional = true, features = ["dct"]}
rust-kernel-linux-util = {path = "../../../deps/krcore/rust-kernel-rdma/rust-kernel-linux-util", optional = true, features=["static_log_check","max_level_trace"]}
krdma-test = {path="../../../deps/krcore/rust-kernel-rdma/krdma-test",optional = true}
rust-kernel-rdma-base = {path = "../../../deps/krcore/rust-kernel-rdma/rust-kernel-rdma-base",optional = true}
thiserror-no-std = "2.0.2"

[dev-dependencies]
kernel-module-testlib = { path = "../../../deps/rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
